boreal/tests/assets/invalid_files/compilation/invalid_type.yar
rule a {
    condition:
        uint16("str") == 3
}
